# Analytics-Platform

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
analytics_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: dependencies.py  main.py  test-conflict.py
app/api/: auth.py  auth_api.py  dependencies.py  projects_api.py  users_api.py
app/core/: config.py  database.py  exceptions.py  security.py
app/models/: __init__.py  membership_model.py  project_model.py  users.py  users_model.py
app/repositories/: __init__.py  base_repo.py  memberships_repo.py  projects_repo.py  users_repo.py
app/schemas/: __init__.py  auth_schemas.py  jwt.py  membership_schemas.py  projects_schemas.py  user.py  user_schemas.py
app/services/: __init__.py  auth_service.py  project_service.py  token.py  token_service.py  user_service.py
services/: .dockerignore  Dockerfile  main.py  mypy.ini  requirements.txt
services/auth_service/: .dockerignore  Dockerfile  main.py  requirements.txt
services/auth_service/application/: exceptions.py
services/auth_service/application/dto/: input.py  output.py
services/auth_service/application/use_cases/: __init__.py  login.py  logout.py  (+2 more)
services/auth_service/migrations/: env.py
services/auth_service/presentation/: dependencies.py  exception_handler.py
services/migrations/: env.py
services/migrations/versions/: 40893df254f7_init.py  79ebe026ca67_create_users_table.py
services/shared/core/: database.py  settings.py
services/user_service/presentation/: dependencies.py
services/workspace_service/: main.py
services/workspace_service/application/: exceptions.py
services/workspace_service/presentation/: dependencies.py
tests/: conftest.py  factories.py
tests/e2e/: test_auth_flow.py  test_project_flow.py  test_user_flow.py
tests/fakes/: fake_membership_repo.py  fake_project_repo.py  fake_user_repo.py  stubs.py
tests/integration/: tets_auth.py
tests/unit/services/: test_auth_service.py  test_project_service.py  test_token_service.py  test_user_service.py
(+89 files in other folders)
